--- a/index.html
+++ b/index.html
@@ -245,6 +245,26 @@
               </div>
             </div>
             <div id="w-node-_7a36db64-f0d8-577b-777a-a3ef674bc26d-4b3d8895" class="display_phone_cell v-middle content">
+              <div id="w-node-_2742d38f-913a-290a-4f54-61e093a8ad07-4b3d8895" class="display_phone_cell">
+                <ul role="list" class="display_phone_navigation w-list-unstyled">
+                  <li data-w-id="efdae09a-24eb-432e-1c1b-1341b4395439" style="color:rgb(58,114,53)" class="display_phone_navigation_button">
+                    <h4 class="display_phone_navigation_text number">01</h4>
+                    <h4 class="display_phone_navigation_text">Exercise</h4>
+                  </li>
+                  <li data-w-id="efdae09a-24eb-432e-1c1b-1341b439543a" class="display_phone_navigation_button">
+                    <h4 class="display_phone_navigation_text number">02</h4>
+                    <h4 class="display_phone_navigation_text">Nourishment</h4>
+                  </li>
+                  <li data-w-id="efdae09a-24eb-432e-1c1b-1341b439543b" class="display_phone_navigation_button">
+                    <h4 class="display_phone_navigation_text number">03</h4>
+                    <h4 class="display_phone_navigation_text">Recovery</h4>
+                  </li>
+                  <li data-w-id="1505244a-68be-db24-d17b-5e680672d2dc" class="display_phone_navigation_button">
+                    <h4 class="display_phone_navigation_text number">04</h4>
+                    <h4 class="display_phone_navigation_text">Mindset</h4>
+                  </li>
+                </ul>
+              </div>
               <div id="w-node-f328cbe9-a507-6b46-394c-722549a7be07-4b3d8895" style="display:flex;opacity:1" class="display_phone_cell v-middle _1">
                 <h2 id="mockHeading" class="main-heading-style-15 animate">{{ IphoneHeadingExercise }}</h2>
                 <h3 id="mockSubHeading" class="generic-text-style-11 mt_mid animate">{{ IphoneSubHeadingExercise }}</h3>
@@ -265,26 +285,6 @@
                 <h3 id="mockSubHeading" class="generic-text-style-11 mt_mid animate">{{ IphoneSubHeadingMindset }}</h3>
                 <p id="mockDescription" class="body-copy-text-style-1 mt_sml animate">{{ IphoneDescriptionMindset}}</p>
               </div>
-            </div>
-            <div id="w-node-_2742d38f-913a-290a-4f54-61e093a8ad07-4b3d8895" class="display_phone_cell">
-              <ul role="list" class="display_phone_navigation w-list-unstyled">
-                <li data-w-id="efdae09a-24eb-432e-1c1b-1341b4395439" style="color:rgb(58,114,53)" class="display_phone_navigation_button">
-                  <h4 class="display_phone_navigation_text number">01</h4>
-                  <h4 class="display_phone_navigation_text">Exercise</h4>
-                </li>
-                <li data-w-id="efdae09a-24eb-432e-1c1b-1341b439543a" class="display_phone_navigation_button">
-                  <h4 class="display_phone_navigation_text number">02</h4>
-                  <h4 class="display_phone_navigation_text">Nourishment</h4>
-                </li>
-                <li data-w-id="efdae09a-24eb-432e-1c1b-1341b439543b" class="display_phone_navigation_button">
-                  <h4 class="display_phone_navigation_text number">03</h4>
-                  <h4 class="display_phone_navigation_text">Recovery</h4>
-                </li>
-                <li data-w-id="1505244a-68be-db24-d17b-5e680672d2dc" class="display_phone_navigation_button">
-                  <h4 class="display_phone_navigation_text number">04</h4>
-                  <h4 class="display_phone_navigation_text">Mindset</h4>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
@@ -365,40 +365,40 @@
         </div>
         <div class="w-layout-grid display_price_grid mt_mid">
           <div id="w-node-b809e25d-bc34-02b2-e85a-60ece4153beb-4b3d8895" class="display_price_cell">
-            <div class="card price_card">
+            <div class="card price_card alt">
               <div class="card_header">
                 <h4 class="main-heading-style-1">{{ PricingHeading1 }}</h4>
                 <p class="body-copy-text-style-1">{{ PricingSubHeading1 }}</p>
               </div>
-              <div class="card_body price_card mt_xsml">
-                <ul role="list" class="card_list w-list-unstyled">
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+              <div class="card_body price_card mt_xsml alt">
+                <ul role="list" class="card_list alt w-list-unstyled">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Greatest value per year</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Tailored Programs</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Workout Library</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Recovery Library</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Recipe Library</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Tutorial Library</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Mindset Messages</h4>
                   </li>
-                  <li class="card_list_item"><img src="images/the_legends-tick-white.svg" loading="lazy" alt="" class="pricing_icon">
+                  <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                     <h4 class="pricing_text">Personalised Tracking</h4>
                   </li>
                 </ul>
               </div>
-              <a href="questionnaire.html" class="button-style-2 card_button mt_xsml w-button">Start questionnaire</a>
+              <a href="questionnaire.html" class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
             </div>
           </div>
           <div id="w-node-cfbb80ff-e389-e820-bc7b-5e96e20d4081-4b3d8895" class="display_price_cell">
