--- a/program-selection.html
+++ b/program-selection.html
@@ -308,11 +308,11 @@ overflow-x: hidden;
   <div style="display:none;opacity:0" class="modal">
     <div class="modal-body">
       <div class="modal-header">
-        <h2 class="modal-heading">Well done! on choosing a program</h2>
+        <h2 class="modal-heading">Well done on choosing a program</h2>
       </div>
       <div w-el="stripe_buttons" class="modal_box">
         <div class="modal-content">
-          <p class="modal-body-copy">Finish setting up your account by proceeding to Stripe for payment.<br></p>
+          <p class="modal-body-copy">Finish setting up your account by proceeding to Stripe for payment details. You won't be charged until the end of your free trial, cancel at any time'. <br></p>
         </div>
         <div class="value_box mt_sml">
           <a href="#" id="annualBuyLink" w-el="program_add_anually" data-w-id="ca66fbe8-a045-f33b-4715-0a9e548f00f9" class="button-style-1 no-margin w-button">$119.88 annually</a>
