--- a/recovery.html
+++ b/recovery.html
@@ -230,7 +230,7 @@ overflow-x: hidden;
                  <span v-show="workout.round > 0">Round</span>
                 </div>
                 <div id="mainNumText" w-el="workout_round_number" class="main-heading-style-4 center-align">
-                  <span v-show="workout.round > 0">{{workout.round}}</span><span v-show="workout.round == 0">Warm Up</span>
+                  <span v-show="workout.round > 0">{{workout.round}}</span><span v-show="workout.round == 0">Start Recovery</span>
                 </div>
               </div>
             </div>
@@ -286,7 +286,7 @@ overflow-x: hidden;
           <div id="roundPopup" class="workout-popup" v-if="popup">
             <div id="roundHeader" class="header-current" v-if="popup">
               <div class="workout-navigation">
-                <div class="generic-text-style-2" ref="roundText"><span v-show="workout.round > 0">Round</span><span v-show="workout.round == 0">Warm Up</span></div>
+                <div class="generic-text-style-2" ref="roundText"><span v-show="workout.round > 0">Round</span><span v-show="workout.round == 0">Recovery</span></div>
                 <div id="headerNumText" class="generic-text-style-3">
                   <span v-show="workout.round > 0">{{workout.round}}</span>
                 </div>
@@ -301,12 +301,12 @@ overflow-x: hidden;
             <div id="recoveryMessage" class="finish_modal_body workout_style">
               <div class="modal-header">
                 <h2 class="finish_modal_heading">
-                  You have completed your recovery!
+                  You have completed your recovery
                 </h2>
               </div>
               <div class="modal-content">
                 <p class="modal-body-copy workout_style_copy">
-                  Congratulations! return to the program hub via the button below.
+                  Congratulations! Return to the program hub via the button below.
                 </p>
               </div>
               <a href="program-hub.html"
