--- a/workout.html
+++ b/workout.html
@@ -266,12 +266,12 @@
             <div id="recoveryMessage" class="finish_modal_body workout_style">
               <div class="modal-header">
                 <h2 class="finish_modal_heading">
-                  You have completed your workout!
+                  You have completed your workout
                 </h2>
               </div>
               <div class="modal-content">
                 <p class="modal-body-copy workout_style_copy">
-                  Congratulations! click the button below to start your recovery.
+                  Congratulations! Click the button below to start your recovery.
                 </p>
               </div>
               <a id="recoveryLink" v-bind:href="`/recovery.html?recovery=${workout.recoveryLink[0]}`"
