--- a/tutorial.html
+++ b/tutorial.html
@@ -353,27 +353,6 @@ overflow-x: hidden;
       <div class="app-head tutorial">
         <div w-el="tutorial_image" class="app-block fixed app-hero-image">
           <div class="app-block fixed overlay">
-            <div data-poster-url="https://uploads-ssl.webflow.com/644871bc90fe690704e5b0ec/64508a6592a91d6379d0c227_legends-exercise-002-poster-00001.jpg" data-video-urls="videos/legends-exercise-002-transcode.mp4,videos/legends-exercise-002-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="app-fullscreen-video scroll hide w-background-video w-background-video-atom"><video id="89015c53-c0c6-a6c5-4508-b8512334094a-video" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/644871bc90fe690704e5b0ec/64508a6592a91d6379d0c227_legends-exercise-002-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                <source src="videos/legends-exercise-002-transcode.mp4" data-wf-ignore="true">
-                <source src="videos/legends-exercise-002-transcode.webm" data-wf-ignore="true">
-              </video><noscript>
-                <style>
-  [data-wf-bgvideo-fallback-img] {
-    display: none;
-  }
-  @media (prefers-reduced-motion: reduce) {
-    [data-wf-bgvideo-fallback-img] {
-      position: absolute;
-      z-index: -100;
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-  }</style><img data-wf-bgvideo-fallback-img="true" src="https://uploads-ssl.webflow.com/644871bc90fe690704e5b0ec/64508a6592a91d6379d0c227_legends-exercise-002-poster-00001.jpg" alt="">
-              </noscript>
-              <div aria-live="polite"><button type="button" data-w-bg-video-control="true" aria-controls="89015c53-c0c6-a6c5-4508-b8512334094a-video" class="w-backgroundvideo-backgroundvideoplaypausebutton w-background-video--control"><span><img loading="lazy" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628299f8aa233b83918e24fd_Pause.svg" alt="Pause video"></span><span hidden=""><img loading="lazy" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628298b20ae0236682d4b87f_Play-24.svg" alt="Play video"></span></button></div>
-            </div>
             <div class="app-block-content">
               <div class="info-block auto-margin">
                 <div class="info-block-header">
@@ -424,5 +403,6 @@ overflow-x: hidden;
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
+  <script src="/js/tutorials/tutorial.js"></script>
 </body>
 </html>
