--- a/program-selection.html
+++ b/program-selection.html
@@ -352,6 +352,7 @@ overflow-x: hidden;
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/programs/program-selection.js" type="text/javascript"></script>
 </body>
