--- a/program.html
+++ b/program.html
@@ -195,7 +195,7 @@
                 <div class="accordion-arrow-icon"></div>
               </div>
             </div>
-            <div class="accordion-body style-2">
+            <div class="accordion-body style-2 hide_accordion">
               <p w-el="faq_description" class="body-copy-text-style-1">This is the description for this program.<br>This will detail the types of workouts with the program. It should detail to main object of the program and the results that can be expected. This description can be as long as required</p>
             </div>
           </div>
