--- a/recipe-library.html
+++ b/recipe-library.html
@@ -368,6 +368,12 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
                 </a>
               </div>
             </div>
+            <div v-if="Loading === false && filteredList.length == 0" class="results_message">
+              <h1 class="main-heading-style-11 center-align">No Results found try again...</h1>
+            </div>
+            <div v-if="Loading === true" class="results_message">
+              <h1 class="main-heading-style-11 center-align">Loading Please wait...</h1>
+            </div>
             <div class="info-block auto-margin">
               <a href="recipe-hub.html" class="button-style-3 w-button">Back to Recipe hub</a>
             </div>
