--- a/workout-library.html
+++ b/workout-library.html
@@ -353,8 +353,8 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
               </div>
             </div>
             <div class="content-block style-2">
-              <div v-for="(Workout, index) in filteredList" v-bind:key="Workout">
-              <a :href="`workout-overview.html?workout=${Workout.ID}`" class="capsule-body style-1 capsule-filter w-inline-block" >
+              <div v-for="(Workout, index) in filteredList" v-bind:key="Workout" >
+              <a :href="`workout-overview.html?workout=${Workout.ID}`" class="capsule-body style-1 capsule-filter w-inline-block">
                 <div class="capsule-image-block image_src"><img loading="lazy" v-bind:srcset="`${Workout.Image[0].url}`" alt="" class="full_thumbnail"></div>
                 <div class="capsule-header-content">
                   <div class="capsule-header-text">
@@ -370,11 +370,15 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
                 </div>
               </a>
               </div>
-              <h2 class="main-heading-style-1 no-results hide">Sorry No Results Found.</h2>
+              <div v-if="Loading === false && filteredList.length == 0" class="results_message">
+                <h1 class="main-heading-style-11 center-align">No Results found try again...</h1>
+              </div>
+              <div v-if="Loading === true" class="results_message">
+                <h1 class="main-heading-style-11 center-align">Loading Please wait...</h1>
+              </div>
             </div>
             <div class="info-block auto-margin">
               <a href="workout-overview.html" class="button-style-1 hide w-button">Pick up where you left off</a>
-              <link rel="prerender" href="/workout-overview">
               <a href="program-hub.html" class="button-style-3 w-button">Back to Week overview</a>
             </div>
           </div>
@@ -461,7 +465,6 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
       <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
     </svg>
   </div>
-  <script src="sal/sal.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
