--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
     </div>
     <div class="scroll_slider">
       <div class="app-section scrollable_base">
-        <div class="content" style="max-width: none !important;">
+        <div class="content">
           <div class="content-headings">
             <h2 id="S_2_Heading" w-el="S_2_Heading" class="main-heading-style-21">{{ S2Heading }}</h2>
             <h3 id="S_2_Sub_Heading" w-el="S_2_Sub_Heading" class="main-sub-heading-style-8">{{ S2SubHeading }}</h3>
           </div>
-          <div id="Blog_Content" class="card_scroll_content" style="margin-left: 0 !important;">
+          <div id="Blog_Content" class="card_scroll_content">
             <div class="card_scroll_bar"></div>
             <div w-el="blog_card" id="w-node-_26eaf484-5213-5aa4-35f5-234bcb6b0b7d-4b3d8895" class="card scroll_card">
               <div class="card_image"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" w-el="blog_card_image" alt="" class="img_full card_img_tag"></div>
