--- a/program-selection.html
+++ b/program-selection.html
@@ -343,7 +343,7 @@ overflow-x: hidden;
           <p class="modal-body-copy">Finish setting up your account by proceeding to Stripe for payment details. You won't be charged until the end of your free trial, cancel at any time'. <br></p>
         </div>
         <div class="value_box mt_sml">
-          <a href="#" id="annualBuyLink" w-el="program_add_annually" data-w-id="ca66fbe8-a045-f33b-4715-0a9e548f00f9" class="button-style-1 no-margin w-button">$119.88 annually</a>
+          <a href="#" id="annualBuyLink" w-el="program_add_anually" data-w-id="ca66fbe8-a045-f33b-4715-0a9e548f00f9" class="button-style-1 no-margin w-button">$119.88 annually</a>
           <div class="value_circle_badge">
             <div class="value_text_style">Best <br>Value</div>
           </div>
