Final Live Changes

--- a/program-hub.html
+++ b/program-hub.html
@@ -364,7 +364,7 @@ overflow-x: hidden;
                   </div>
                   <div w-el="program_title" class="main-heading-style-6 center-align">Loading...</div>
                 </div>
-                <a id="startNextWorkout" v-bind:href="`/workout-overview.html?workout=${nextWorkoutID}`" data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb1072" class="button-style-1 w-button">Start my next workout</a>
+                <a id="startNextWorkout" v-bind:href="`/workout-overview.html?workout=${nextWorkoutID}`" data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb1072" class="button-style-1 w-button" style="display: none;">Start my next workout</a>
                 <div class="line"></div>
               </div>
             </div>
