--- a/index.html
+++ b/index.html
@@ -481,40 +481,40 @@
           <div class="pricing_mask w-slider-mask">
             <div class="price_slide w-slide">
               <div class="display_price_cell">
-                <div class="card price_card">
+                <div class="card price_card alt">
                   <div class="card_header">
                     <h4 class="main-heading-style-1">$9.99/month</h4>
                     <p class="body-copy-text-style-1">$119.88 billed annually (save $120)</p>
                   </div>
-                  <div class="card_body price_card mt_xsml">
-                    <ul role="list" class="card_list w-list-unstyled">
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                  <div class="card_body price_card mt_xsml alt">
+                    <ul role="list" class="card_list alt w-list-unstyled">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Greatest value per year</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Tailored Programs</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Workout Library</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Recovery Library</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Recipe Library</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Tutorial Library</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Mindset Messages</h4>
                       </li>
-                      <li class="card_list_item"><img alt="" loading="lazy" src="images/the_legends-tick-white.svg" class="pricing_icon">
+                      <li class="card_list_item"><img src="images/the_legends-tick-green.svg" loading="lazy" alt="" class="pricing_icon">
                         <h4 class="pricing_text">Personalised Tracking</h4>
                       </li>
                     </ul>
                   </div>
-                  <a href="questionnaire.html" class="button-style-2 card_button mt_xsml w-button">Start questionnaire</a>
+                  <a href="questionnaire.html" class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
                 </div>
               </div>
             </div>
